--- a/MD5Calculater/MD5Calculater/MD5Calculater.csproj
+++ b/MD5Calculater/MD5Calculater/MD5Calculater.csproj
@@ -39,6 +39,7 @@
   <PropertyGroup>
     <ApplicationIcon>Chiori.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
