--- a/Auto7z_Rev/Auto7z_Rev/Auto7z_Rev.csproj
+++ b/Auto7z_Rev/Auto7z_Rev/Auto7z_Rev.csproj
@@ -103,7 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Escoffier.ico" />
-    <EmbeddedResource Include="Resources\MD5Calculater.exe" />
+    <EmbeddedResource Include="Resources\MD5Calculator.exe" />
     <EmbeddedResource Include="Resources\sevenz\7z.dll" />
     <EmbeddedResource Include="Resources\sevenz\7z.exe" />
     <EmbeddedResource Include="Resources\sevenz\Lang\zh-cn.txt" />
