--- a/Auto7z_Rev/Auto7z_Rev/Auto7z_Rev.csproj
+++ b/Auto7z_Rev/Auto7z_Rev/Auto7z_Rev.csproj
@@ -113,4 +113,8 @@
     <EmbeddedResource Include="Resources\icon\Null.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
 </Project>
