--- a/MD5Calculator/MD5Calculator/MD5Calculator.csproj
+++ b/MD5Calculator/MD5Calculator/MD5Calculator.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Resources\MD5Calculator.exe.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
